# qca-os2

./: CMakeLists.txt
include/QtCrypto/: qca_export.h
plugins/qca-gnupg/: gpgaction.cpp  lineconverter.cpp  utils.cpp
src/: CMakeLists.txt  qca_core.cpp  qca_default.cpp
src/botantools/botan/alloc_mmap/: mmap_mem.cpp
src/botantools/botan/ml_unix/: mlock.cpp
src/support/: qpipe.cpp
tools/mozcerts/: CMakeLists.txt
tools/qcatool/: CMakeLists.txt
